--- a/SFJ/app/build.gradle
+++ b/SFJ/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     compile project(':fragmentation_core')
     compile 'com.roughike:bottom-bar:2.3.1'
     compile 'com.facebook.fresco:fresco:0.12.0'
+    compile 'com.android.support:cardview-v7:25.3.0'
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 }
