--- a/SFJ/app/build.gradle
+++ b/SFJ/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.facebook.fresco:fresco:0.12.0'
     compile 'com.android.support:cardview-v7:25.3.0'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.34'
 }
