--- a/SFJ/app/src/main/AndroidManifest.xml
+++ b/SFJ/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         </activity>
 
         <activity android:name=".ui.MainActivity"
-            android:configChanges="keyboardHidden|orientation"></activity>
+            android:configChanges="orientation|keyboardHidden|screenSize"></activity>
 
         <activity android:name=".ui.RegisterActivity"></activity>
 
