--- a/SFJ/app/build.gradle
+++ b/SFJ/app/build.gradle
@@ -55,4 +55,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.3.0'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.3'
     compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.34'
+    compile 'com.umeng.sdk:common:latest.integration'
+    compile 'com.umeng.sdk:analytics:latest.integration'
 }
